--- a/index.html
+++ b/index.html
@@ -3,9 +3,148 @@
 
 <head>
    <title>React Meta</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+   <script src="https://kit.fontawesome.com/521d0075db.js" crossorigin="anonymous"></script>
+   <style>
+      body, h1, h2, h3, h4, h5, h6 {
+         font-family: "Raleway", sans-serif
+      }
+
+      body, html {
+         height: 100%;
+         line-height: 1.8;
+      }
+
+      .bgimg-1 {
+         background-position: center;
+         background-size: cover;
+         background-image: url("./img/background.jpg");
+         min-height: 100%;
+      }
+
+      .w3-bar .w3-button {
+         padding: 16px;
+      }
+   </style>
 </head>
 
 <body>
+   <!-- Navbar (sit on top) -->
+   <div class="w3-top">
+      <div class="w3-bar w3-white w3-card" id="myNavbar">
+         <a href="#about" class="w3-bar-item w3-button w3-wide">React Meta</a>
+         <!-- Right-sided navbar links -->
+         <div class="w3-right w3-hide-small">
+            <a href="#about" class="w3-bar-item w3-button"><i class="fa fa-th"></i>ABOUT</a>
+            <a href="#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i>Work</a>
+            <a href="#blog" class="w3-bar-item w3-button"><i class="fa fa-th"></i>Blog</a>
+         </div>
+         <!-- Hide right-floated links on small screens and replace them with a menu icon -->
+
+         <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium"
+            onclick="sidebar_open()">
+            <i class="fa fa-bars"></i>
+         </a>
+      </div>
+   </div>
+
+   <!-- Sidebar on small screens when clicking the menu icon -->
+   <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large"
+      style="display:none" id="mySidebar">
+      <a href="javascript:void(0)" onclick="sidebar_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
+      <a href="#about" onclick="sidebar_close()" class="w3-bar-item w3-button">ABOUT</a>
+      <a href="#work" onclick="sidebar_close()" class="w3-bar-item w3-button">WORK</a>
+      <a href="#blog" onclick="sidebar_close()" class="w3-bar-item w3-button">BLOG</a>
+   </nav>
+
+   <!-- About Section -->
+   <header class="bgimg-1 w3-display-container w3-grayscale-min" id="about">
+      <div class="w3-display-left w3-text-white" style="padding:48px">
+         <span class="w3-jumbo w3-hide-small">React something that Meta</span><br>
+         <span class="w3-xxlarge w3-hide-large w3-hide-medium">React something that Meta</span><br>
+         <span class="w3-large">Stop wasting time on daily tasks</span>
+         <p><a href="#work" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Visit Our Work</a></p>
+      </div>
+   </header>
+
+   <!-- Work Section -->
+   <div class="w3-container" style="padding:128px 16px" id="work">
+      <h3 class="w3-center">Our Work</h3>
+      <div class="w3-row-padding" style="margin-top:64px">
+         <div class="w3-col l6 m6 s12 w3-margin-bottom">
+            <div class="w3-card w3-padding">
+               <img src="./img/coming_soon.png" alt="John" style="width:100%">
+               <div class="w3-container">
+                  <h3>Day Day Count</h3>
+                  <p class="w3-opacity">Mobile App</p>
+                  <p>Day Day Count is the easiest and most user friendly expense manager app in the store. The simple fact is, by tracking your spending you will be able to stick to a budget and therefore SAVE MONEY. So download it for free, enter your expenses and income, and have instant control over your spending!</p>
+                  <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-download"></i> Download</button>
+                  </p>
+               </div>
+            </div>
+         </div>
+         <div class="w3-col l6 m6 s12 w3-margin-bottom">
+            <div class="w3-card w3-padding">
+               <img src="./img/coming_soon.png" alt="Mike" style="width:100%">
+               <div class="w3-container">
+                  <h3>Breakout 2022</h3>
+                  <p class="w3-opacity">Web Game</p>
+                  <p>Use the ball to break the bricks with the help of many different power-ups. Breakout 2022 is the modern version of the classic brick breaking game. The online scoreboard displays scores for breakout players worldwide.</p>
+                  <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-play"></i> Play</button>
+                  </p>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+
+   <!-- Skills Section -->
+   <div class="w3-container w3-light-grey w3-padding-64">
+      <div class="w3-row-padding">
+         <div class="w3-col m6">
+            <h3>Our Skills.</h3>
+         </div>
+         <div class="w3-col m6">
+            <p class="w3-wide"><i class="fa fa-mobile-alt w3-margin-right"></i>Mobile App Development</p>
+            <div class="w3-grey">
+               <div class="w3-container w3-indigo w3-center" style="width:100%">100%</div>
+            </div>
+            <p class="w3-wide"><i class="fa fa-gamepad w3-margin-right"></i>2D Game Development</p>
+            <div class="w3-grey">
+               <div class="w3-container w3-deep-orange w3-center" style="width:100%">100%</div>
+            </div>
+            <p class="w3-wide"><i class="fa fa-desktop w3-margin-right"></i>Website Development</p>
+            <div class="w3-grey">
+               <div class="w3-container w3-teal w3-center" style="width:100%">100%</div>
+            </div>
+         </div>
+      </div>
+   </div>
+
+   <!-- Footer -->
+   <footer class="w3-center w3-black w3-padding-64">
+      <a href="#about" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+      <p><a href="https://www.freepik.com/vectors/background">Background vector created by rawpixel.com - www.freepik.com</a></p>
+      <p>Powered by React Meta</p>
+   </footer>
+
+   <script>
+      var mySidebar = document.getElementById("mySidebar");
+      function sidebar_open() {
+         if (mySidebar.style.display === 'block') {
+            mySidebar.style.display = 'none';
+         } else {
+            mySidebar.style.display = 'block';
+         }
+      }
+      function sidebar_close() {
+         mySidebar.style.display = "none";
+      }
+   </script>
+
 </body>
 
 </html>
