--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Zilla%20Slab">
    <script src="https://kit.fontawesome.com/521d0075db.js" crossorigin="anonymous"></script>
    <style>
+
+      .font-rm {
+         color: #F66868;
+         font-family: "Zilla Slab", sans-serif;
+         font-weight: bold;
+         font-size: larger;
+      }
+
       body, h1, h2, h3, h4, h5, h6 {
          font-family: "Raleway", sans-serif
       }
@@ -38,7 +47,7 @@
    <!-- Navbar (sit on top) -->
    <div class="w3-top">
       <div class="w3-bar w3-white w3-card" id="myNavbar">
-         <a href="#about" class="w3-bar-item w3-button w3-wide">React Meta</a>
+         <a href="#about" class="w3-bar-item w3-button w3-wide font-rm">React Meta</a>
          <!-- Right-sided navbar links -->
          <div class="w3-right w3-hide-small">
             <a href="#about" class="w3-bar-item w3-button"><i class="fa fa-home"></i> ABOUT</a>
