--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Zilla%20Slab">
    <script src="https://kit.fontawesome.com/521d0075db.js" crossorigin="anonymous"></script>
    <style>
-
       .font-rm {
          color: #F66868;
          font-family: "Zilla Slab", sans-serif;
@@ -20,7 +18,7 @@
       }
 
       body, h1, h2, h3, h4, h5, h6 {
-         font-family: "Raleway", sans-serif
+         font-family: "Zilla Slab", sans-serif
       }
 
       body, html {
@@ -38,8 +36,6 @@
       .w3-bar .w3-button {
          padding: 16px;
       }
-
-      .w3-row.custom-flex.flex > .w3-col {flex: 1 0 290px;} 
    </style>
 </head>
 
@@ -74,9 +70,8 @@
    <!-- About Section -->
    <header class="bgimg-1 w3-display-container w3-grayscale-min" id="about">
       <div class="w3-display-left w3-text-white" style="padding:48px">
-         <span class="w3-jumbo w3-hide-small">React something that Meta</span><br>
-         <span class="w3-xxlarge w3-hide-large w3-hide-medium">React something that Meta</span><br>
-         <span class="w3-large">React to App, Meta to Game.</span>
+         <span class="w3-jumbo w3-hide-small">React to App, Meta to Game.</span><br>
+         <span class="w3-xxlarge w3-hide-large w3-hide-medium">React to App, Meta to Game.</span><br>
          <p><a href="#work" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Visit Our Work</a></p>
       </div>
    </header>
@@ -84,52 +79,23 @@
    <!-- Work Section -->
    <div class="w3-container" style="padding:128px 16px" id="work">
       <h3 class="w3-center">Our Work</h3>
-      <div class="w3-row-padding" style="margin-top:64px">
-         <div class="w3-col l3 m3 s12 w3-margin-bottom">
-            <div class="w3-card w3-padding">
-               <img src="./img/coming_soon.png" alt="coming soon" style="width:100%">
-               <div class="w3-container">
-                  <h3>Day Day Count</h3>
-                  <p class="w3-opacity">Mobile App</p>
-                  <p>Day Day Count is the easiest and most user friendly expense manager app in the store. The simple fact is, by tracking your spending you will be able to stick to a budget and therefore SAVE MONEY. So download it for free, enter your expenses and income, and have instant control over your spending!</p>
-                  <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-download"></i> Download</button>
-                  </p>
-               </div>
+      <div class="w3-row" style="margin-top:64px">
+         <div class="w3-col l3 m3 s12 w3-padding w3-margin-bottom">
+            <img src="./img/coming_soon.png" alt="coming soon" style="width:100%">
+            <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-download"></i> Download</button> </p>
+            <div class="w3-container">
+               <h3>Day Day Count</h3>
+               <p class="w3-opacity">Mobile App</p>
+               <p>Day Day Count is the easiest and most user friendly expense manager app in the store. The simple fact is, by tracking your spending you will be able to stick to a budget and therefore SAVE MONEY. So download it for free, enter your expenses and income, and have instant control over your spending!</p>
             </div>
          </div>
-         <div class="w3-col l3 m3 s12 w3-margin-bottom">
-            <div class="w3-card w3-padding">
-               <img src="./img/coming_soon.png" alt="coming soon" style="width:100%">
-               <div class="w3-container">
-                  <h3>Breakout 2022</h3>
-                  <p class="w3-opacity">Web Game</p>
-                  <p>Use the ball to break the bricks with the help of many different power-ups. Breakout 2022 is the modern version of the classic brick breaking game. The online scoreboard displays scores for breakout players worldwide.</p>
-                  <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-play"></i> Play</button>
-                  </p>
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
-
-   <!-- Skills Section -->
-   <div class="w3-container w3-light-grey w3-padding-64">
-      <div class="w3-row-padding">
-         <div class="w3-col m6">
-            <h3>Our Skills.</h3>
-         </div>
-         <div class="w3-col m6">
-            <p class="w3-wide"><i class="fa fa-mobile-alt w3-margin-right"></i>Mobile App Development</p>
-            <div class="w3-grey">
-               <div class="w3-container w3-indigo w3-center" style="width:100%">100%</div>
-            </div>
-            <p class="w3-wide"><i class="fa fa-gamepad w3-margin-right"></i>2D Game Development</p>
-            <div class="w3-grey">
-               <div class="w3-container w3-deep-orange w3-center" style="width:100%">100%</div>
-            </div>
-            <p class="w3-wide"><i class="fa fa-desktop w3-margin-right"></i>Website Development</p>
-            <div class="w3-grey">
-               <div class="w3-container w3-teal w3-center" style="width:100%">100%</div>
+         <div class="w3-col l3 m3 s12 w3-padding w3-margin-bottom">
+            <img src="./img/coming_soon.png" alt="coming soon" style="width:100%">
+            <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-play"></i> Play</button> </p>
+            <div class="w3-container">
+               <h3>Breakout 2022</h3>
+               <p class="w3-opacity">Web Game</p>
+               <p>Use the ball to break the bricks with the help of many different power-ups. Breakout 2022 is the modern version of the classic brick breaking game. The online scoreboard displays scores for breakout players worldwide.</p>
             </div>
          </div>
       </div>
@@ -144,7 +110,6 @@
 
    <script>
       var rmSidebar = document.getElementById("rmSidebar");
-      rmSidebar.addEventListener()
       function sidebar_open() {
          if (rmSidebar.style.display === 'block') {
             rmSidebar.style.display = 'none';
@@ -152,7 +117,6 @@
             rmSidebar.style.display = 'block';
          }
       }
-      
       function sidebar_close() {
          rmSidebar.style.display = "none";
       }
