--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          line-height: 1.8;
       }
 
-      .bgimg-1 {
+      #about {
          background-position: center;
          background-size: cover;
          background-image: url("./img/background.jpg");
@@ -68,7 +68,7 @@
    </nav>
 
    <!-- About Section -->
-   <header class="bgimg-1 w3-display-container w3-grayscale-min" id="about">
+   <header class="w3-display-container w3-grayscale-min" id="about">
       <div class="w3-display-left w3-text-white" style="padding:48px">
          <span class="w3-jumbo w3-hide-small">React to App, Meta to Game.</span><br>
          <span class="w3-xxlarge w3-hide-large w3-hide-medium">React to App, Meta to Game.</span><br>
